--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,45 @@
 @import "reset.css";
 
-body{
-     background-color: bisque;
-}
+
+body
 
 
-.container{
-     width: 600px;
-     background-color: azure;
-     position: absolute;
-     display: flex;
-     top: 100px;
-     left: 250px;
-     box-shadow: 1px -10px 9px 0px rgba(0,0,0,0.75);
+ .contactForm {
+      min-width: 600px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 50px;
+      min-width: 1000px;
+     background-image: url("../img/gory_ozero_oblaka_151341_1920x1080.jpg");
 
+ }
 
-
-}
-.contactForm  {
-     width: 600px;
-     display: flex;
-     flex-direction: column;
-     align-content: space-evenly;
-     box-sizing: border-box;
-     border: 5px;
-     flex-wrap: nowrap;
-     overflow:hidden;
-
-
-}
-
-.contactFormHead{
-     height:50px;
-     text-align: left;
-     line-height: 1.5em;
-     margin-left: 5px;
-     margin-top: 5px;
-}
-
-.contactFormYourName {
-     align-items: center;
-     margin-top: 10px;
-     flex-basis: 15%;
-
-}
-.contactFormYouEmail{
-     height: 50px;
-
-}
-
-.contactFormPhone{
-     display: flex;
-     box-sizing: border-box;
-     height: 50px;
+.contactForm > div {
+     line-height: 40px;
+     font-size: 20px;
      width: 100%;
+     padding: 20px;
+     box-sizing: border-box;
 
 
 }
 
-.input{
-     width: 150px;
-     height: 20px;
-     margin-left: 5px;
-}
-.contactFormMassage{
-     margin-top: 5px;
-     height: 50px;
-
+ .inputs{
+      box-sizing: border-box;
+      margin-left: 10px;
+      width: 400px;
 }
 
-.contactFormMassage{
-     margin-top: 5px;
-     height: 50px;
-
+.inputs > .inputPhone{
+     display: flex;
+     flex-direction: row;
+    justify-content: center;
 }
+
+#Messegen{
+     width: 400px;
+     height: 250px;
+}
+
