--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "../css/reset.css";
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower&display=swap');
 
 body{
      background-image: url("../img/gory_ozero_oblaka_151341_1920x1080.jpg");
@@ -23,6 +24,7 @@ body{
      padding: 8px;
      box-sizing: border-box;
      margin-left: 50px;
+     font-family: 'Indie Flower', cursive;
 
 }
 
@@ -30,7 +32,9 @@ body{
       box-sizing: border-box;
       margin-left: 10px;
       width: 400px;
-}
+      font-family: 'Indie Flower', cursive;
+
+ }
 
 .inputs > .inputPhone{
      display: flex;
