Input add placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body{
       min-width: 600px;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       padding: 50px;
       max-width: 1000px;
       background-image: url("../img/gory_ozero_oblaka_151341_1920x1080.jpg");
@@ -26,6 +25,7 @@ body{
      margin-left: 50px;
      font-family: 'Indie Flower', cursive;
 
+
 }
 
  .inputs{
@@ -41,6 +41,7 @@ body{
      flex-direction: row;
      justify-content: center;
      margin-left: 10px;
+     padding-left: 5px;
 }
 
 #Messegen{
