--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body{
       background-image: url("../img/gory_ozero_oblaka_151341_1920x1080.jpg");
       margin: 25px auto;
       box-shadow: 2px 0px 5px 7px rgba(0,0,0,0.75);
+      align-items: center;
+      justify-content: center;
  }
 
 .contactForm > div {
@@ -29,19 +31,18 @@ body{
 }
 
  .inputs{
-      box-sizing: border-box;
-      margin-left: 10px;
-      width: 400px;
+      display: inline-block;
+      width: 35%;
       font-family: 'Indie Flower', cursive;
-
+      position: relative;
+      left: 80px;
  }
 
 .inputs > .inputPhone{
      display: flex;
      flex-direction: row;
-     justify-content: center;
-     margin-left: 10px;
-     padding-left: 5px;
+
+
 }
 
 #Messegen{
